# detroit

./: .envrc  .gitignore  .rtx.toml  LICENSE  MANIFEST.in  README.md  detroit.py  pyproject.toml  reduction.py  ui.py
.github/workflows/: pypi.yml
api_maker/: README.md  requirements.txt
api_maker/api_maker/: __main__.py
detroit/: __init__.py  d3.py  d3_utils.py  plot.py  style.py  svg.py  time.py  types.py  ui.py  utils.py
detroit/array/: __init__.py  argpass.py  array.py  bin.py  blur.py  extent.py  group.py  nice.py  set_operations.py  ticks.py
detroit/axis/: __init__.py  axis.py
detroit/chord/: __init__.py  chord.py  ribbon.py
detroit/color/: __init__.py  color.py  cubehelix.py  define.py  index.py  lab.py  math.py  src_color.py
detroit/coloration/: __init__.py  color.py  cubehelix.py  format_file.py  lab.py
detroit/contour/: __init__.py  area.py  constant.py  contains.py  contours.py  density.py
detroit/d3/: Adder.py  Delaunay.py  __init__.py  _select.py  _selectAll.py  _selection.py  arc.py  area.py  areaRadial.py  axisBottom.py  axisLeft.py  axisRight.py  axisTop.py  bin.py  bisector.py  brush.py  brushX.py  brushY.py  chord.py  cluster.py  color.py  conic.py  contourDensity.py  contours.py  curveBasis.py  curveBasisClosed.py  curveBasisOpen.py  curveBumpX.py  curveBumpY.py  curveBundle.py  curveCardinal.py  curveCardinalClosed.py  curveCardinalOpen.py  curveCatmullRom.py  curveCatmullRomClosed.py  curveCatmullRomOpen.py  curveLinear.py  curveLinearClosed.py  curveMonotoneX.py  curveMonotoneY.py  (+112 more)
detroit/delaunay/: __init__.py  context.py  delaunator.py  delaunay.py  orient2d.py  path.py  polygon.py  utils.py  voronoi.py
detroit/ease/: __init__.py  back.py  bounce.py  circle.py  cubic.py  elastic.py  exp.py  linear.py  poly.py  quad.py  sin.py  tqmt.py
docs/: requirements.txt
examples/: README.md  all_axis.py  all_continuous_schemes.py  all_curves.py  all_discrete_schemes.py  all_easing_functions.py  all_options_axis.py  all_projections.py  all_stacks.py  all_symbols.py  area.py  bar.py  bubble_map.py  chord.py  cluster.py  density.py  donut.py  fan_chart.py  force_graph.py  gantt.py  graticule.py  heatmap.py  hertz_russel.py  histogram.py  impulse.py  kernel_results.py  latex.py  line.py  multiple_volcano.py  pack.py  partition.py  pca.py  requirements.txt  scatter.py  scatter_matrix.py  stack_area.py  svg2png.py  tree.py  treemap.py  volcano.py  (+1 more)
scraper/: d3.py  logging_config.py  utils.py
scrapper/: d3.py  plot.py
templates/: index.html
tests/: test_hour.py
(+794 files in other folders)
