[project]
name = "detroit"
description = "detroit is wrapper for Python of d3js and Observable Plot."
version = "2.4.0"
readme = "README.md"
authors = [
  { name = "Benjamin BOURBON", email = "ben.bourbon06@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
  "lxml",
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Visualization",
]
license-files = ["LICENSE"]

[project.urls]
Homepage="https://github.com/bourbonut/detroit"
Repository="https://github.com/bourbonut/detroit"
Documentation="https://detroit.readthedocs.io/en/latest/"
